test/Parsing/record-not-a-record.fab
#
# RUN: %fab --parse-only --print-ast %s 2> %t || true
# RUN: FileCheck %s -input-file %t
#

str:string = 'Hello, world!';

# CHECK: not-a-record.fab:[[LINE:[0-9]+]]:7: error: value of type 'string' does not have fields
# CHECK:      [[LINE]]
# CHECK:      foo = str.some_field;
# CHECK-NEXT:       ^~~
foo = str.some_field;
